Bug 26029; add CHROME_WINDOW_MIN flag to enable minimizable dialog windows (and use that for download progress dialogs); r=danm sr=alecf a=asa